# multithreaded-fs

./: .gitignore  Cargo.toml  README.md
json_data/: json_file.json
src/: lib.rs  logger.rs  main.rs  types.rs
