[package]
name = "multithreaded-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["default", "json"] }
tracing-appender = "0.2.3"
tracing-test = "0.2.4"